--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
-                <version>${testcontainers.version}</version>
+                <version>${org.testcontainers.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
